--- a/ConverseStore_Java6/src/main/resources/templates/layout/layout.html
+++ b/ConverseStore_Java6/src/main/resources/templates/layout/layout.html
@@ -18,6 +18,29 @@
         crossorigin="anonymous" />
     <link th:href="@{/css/mycss.css}" rel="stylesheet" />
     <link th:href="@{/font/themify-icons/themify-icons.css}" rel="stylesheet" />
+    <style>
+        .zoom {
+            width: max-content;
+            position: relative;
+        }
+
+        .zoom img {
+            width: 500px;
+            
+        }
+
+        #imgZoom {
+            position: absolute;
+            left: 0;
+            top: 0;
+            --zoom-x: 50%;
+            --zoom-y: 50%;
+            transform: scale(1.5);
+            pointer-events: none;
+            clip-path: circle(100px at var(--zoom-x) var(--zoom-y));
+            opacity: 0;
+        }
+    </style>
 </head>
 
 <body>
@@ -36,6 +59,7 @@
 		src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+		
 </body>
 
 </html>
