--- a/ConverseStore_Java6/src/main/resources/templates/layout/user_menu.html
+++ b/ConverseStore_Java6/src/main/resources/templates/layout/user_menu.html
@@ -25,7 +25,7 @@
 							<li class="nav-item"><a class="nav-link nav-link-custom"
 								th:href="@{/sanpham}">SẢN PHẨM</a></li>
 							<li class="nav-item"><a class="nav-link nav-link-custom"
-								th:href="@{/thongtin}">THÔNG TIN</a></li>
+								th:href="@{/gioithieu}">THÔNG TIN</a></li>
 							<li class="nav-item"><a class="nav-link nav-link-custom"
 								th:href="@{/giohang}">GIỎ HÀNG</a></li>
 							<li class="nav-item dropdown">
