--- a/ConverseStore_Java6/src/main/resources/templates/user/trangchu.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/trangchu.html
@@ -104,7 +104,7 @@
                             </div>
                             <div class="item">
                                 <div class="card border-0 shadow">
-                                    <img src="./images/category/category3.jpg" alt="" class="card-img-top"
+                                    <img src="./imageSP/category3.jpg" alt="" class="card-img-top"
                                         style="height: 300px;">
                                     <div class="card-body">
                                         <div class="card-title text-center">
@@ -115,7 +115,7 @@
                             </div>
                             <div class="item">
                                 <div class="card border-0 shadow">
-                                    <img src="./images/category/category4.jpg" alt="" class="card-img-top"
+                                    <img src="./imageSP/category4.jpg" alt="" class="card-img-top"
                                         style="height: 300px;">
                                     <div class="card-body">
                                         <div class="card-title text-center">
@@ -138,7 +138,7 @@
                 <div class="row">
                     <div class="col-xl-2 col-lg-3 col-sm-4 col-6 mb-4">
                         <div class="card" style="width:100%">
-                            <a href="./chitietsp.html"><img class="card-img-top" src="./images/hight/anh1-1.png"
+                            <a href="./chitietsp.html"><img class="card-img-top" src="./imageSP/anh1-1.png"
                                     alt="Card image" style="width:100%"></a>
                             <div class="card-body">
                                 <a href="./chitietsp.html">
@@ -157,7 +157,7 @@
                     </div>
                     <div class="col-xl-2 col-lg-3 col-sm-4 col-6 mb-4">
                         <div class="card" style="width:100%">
-                            <a href="./chitietsp.html"><img class="card-img-top" src="./images/hight/anh1-1.png"
+                            <a href="./chitietsp.html"><img class="card-img-top" src="./imageSP/anh1-1.png"
                                     alt="Card image" style="width:100%"></a>
                             <div class="card-body">
                                 <a href="./chitietsp.html">
@@ -176,7 +176,7 @@
                     </div>
                     <div class="col-xl-2 col-lg-3 col-sm-4 col-6 mb-4">
                         <div class="card" style="width:100%">
-                            <a href="./chitietsp.html"><img class="card-img-top" src="./images/hight/anh1-1.png"
+                            <a href="./chitietsp.html"><img class="card-img-top" src="./imageSP/anh1-1.png"
                                     alt="Card image" style="width:100%"></a>
                             <div class="card-body">
                                 <a href="./chitietsp.html">
@@ -195,7 +195,7 @@
                     </div>
                     <div class="col-xl-2 col-lg-3 col-sm-4 col-6 mb-4">
                         <div class="card" style="width:100%">
-                            <a href="./chitietsp.html"><img class="card-img-top" src="./images/hight/anh1-1.png"
+                            <a href="./chitietsp.html"><img class="card-img-top" src="./imageSP/anh1-1.png"
                                     alt="Card image" style="width:100%"></a>
                             <div class="card-body">
                                 <a href="./chitietsp.html">
@@ -214,7 +214,7 @@
                     </div>
                     <div class="col-xl-2 col-lg-3 col-sm-4 col-6 mb-4">
                         <div class="card" style="width:100%">
-                            <a href="./chitietsp.html"><img class="card-img-top" src="./images/hight/anh1-1.png"
+                            <a href="./chitietsp.html"><img class="card-img-top" src="./imageSP/anh1-1.png"
                                     alt="Card image" style="width:100%"></a>
                             <div class="card-body">
                                 <a href="./chitietsp.html">
@@ -233,7 +233,7 @@
                     </div>
                     <div class="col-xl-2 col-lg-3 col-sm-4 col-6 mb-4">
                         <div class="card" style="width:100%">
-                            <a href="./chitietsp.html"><img class="card-img-top" src="./images/hight/anh1-1.png"
+                            <a href="./chitietsp.html"><img class="card-img-top" src="./imageSP/anh1-1.png"
                                     alt="Card image" style="width:100%"></a>
                             <div class="card-body">
                                 <a href="./chitietsp.html">
@@ -252,7 +252,7 @@
                     </div>
                     <div class="col-xl-2 col-lg-3 col-sm-4 col-6 mb-4">
                         <div class="card" style="width:100%">
-                            <a href="./chitietsp.html"><img class="card-img-top" src="./images/hight/anh1-1.png"
+                            <a href="./chitietsp.html"><img class="card-img-top" src="./imageSP/anh1-1.png"
                                     alt="Card image" style="width:100%"></a>
                             <div class="card-body">
                                 <a href="./chitietsp.html">
@@ -271,7 +271,7 @@
                     </div>
                     <div class="col-xl-2 col-lg-3 col-sm-4 col-6 mb-4">
                         <div class="card" style="width:100%">
-                            <a href="./chitietsp.html"><img class="card-img-top" src="./images/hight/anh1-1.png"
+                            <a href="./chitietsp.html"><img class="card-img-top" src="./imageSP/anh1-1.png"
                                     alt="Card image" style="width:100%"></a>
                             <div class="card-body">
                                 <a href="./chitietsp.html">
@@ -290,7 +290,7 @@
                     </div>
                     <div class="col-xl-2 col-lg-3 col-sm-4 col-6 mb-4">
                         <div class="card" style="width:100%">
-                            <a href="./chitietsp.html"><img class="card-img-top" src="./images/hight/anh1-1.png"
+                            <a href="./chitietsp.html"><img class="card-img-top" src="./imageSP/anh1-1.png"
                                     alt="Card image" style="width:100%"></a>
                             <div class="card-body">
                                 <a href="./chitietsp.html">
@@ -309,7 +309,7 @@
                     </div>
                     <div class="col-xl-2 col-lg-3 col-sm-4 col-6 mb-4">
                         <div class="card" style="width:100%">
-                            <a href="./chitietsp.html"><img class="card-img-top" src="./images/hight/anh1-1.png"
+                            <a href="./chitietsp.html"><img class="card-img-top" src="./imageSP/anh1-1.png"
                                     alt="Card image" style="width:100%"></a>
                             <div class="card-body">
                                 <a href="./chitietsp.html">
@@ -328,7 +328,7 @@
                     </div>
                     <div class="col-xl-2 col-lg-3 col-sm-4 col-6 mb-4">
                         <div class="card" style="width:100%">
-                            <a href="./chitietsp.html"><img class="card-img-top" src="./images/hight/anh1-1.png"
+                            <a href="./chitietsp.html"><img class="card-img-top" src="./imageSP/anh1-1.png"
                                     alt="Card image" style="width:100%"></a>
                             <div class="card-body">
                                 <a href="./chitietsp.html">
@@ -347,7 +347,7 @@
                     </div>
                     <div class="col-xl-2 col-lg-3 col-sm-4 col-6 mb-4">
                         <div class="card" style="width:100%">
-                            <a href="./chitietsp.html"><img class="card-img-top" src="./images/hight/anh1-1.png"
+                            <a href="./chitietsp.html"><img class="card-img-top" src="./imageSP/anh1-1.png"
                                     alt="Card image" style="width:100%"></a>
                             <div class="card-body">
                                 <a href="./chitietsp.html">
@@ -368,9 +368,69 @@
             </div>
         </div>
         <!-- TOP 10 END -->
+        
+        <!-- Thương hiệu START -->
+        <div id="category">
+            <h4 class="title-bosuutap">THƯƠNG HIỆU</h4>
+            <div class="container-fluid my-5">
+                <div class="row">
+                    <div class="col-12 m-auto">
+                        <div class="owl-carousel owl-theme">
+                            <div class="item mb-4">
+                                <div class="card border-0 shadow" style="    border-radius: 50%;">
+                                    <a href="#"><img src="/imageSP/category1.jpg" alt="" class="card-img-top"
+                                            style="height: 300px;border-radius: 50%;">
+                                        <div class="card-body">
+                                            <div class="card-title text-center">
+                                                <h4>Converse</h4>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="item">
+                                <div class="card border-0 shadow" style="    border-radius: 50%;">
+                                    <img src="./imageSP/category2.jpg" alt="" class="card-img-top"
+                                        style="height: 300px;border-radius: 50%;">
+                                    <div class="card-body">
+                                        <div class="card-title text-center">
+                                            <h4>Vans</h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="card border-0 shadow" style="    border-radius: 50%;">
+                                    <img src="./imageSP/category3.jpg" alt="" class="card-img-top"
+                                        style="height: 300px;border-radius: 50%;">
+                                    <div class="card-body">
+                                        <div class="card-title text-center">
+                                            <h4>Supreme</h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="card border-0 shadow" style="    border-radius: 50%;">
+                                    <img src="./imageSP/category4.jpg" alt="" class="card-img-top"
+                                        style="height: 300px;border-radius: 50%;">
+                                    <div class="card-body">
+                                        <div class="card-title text-center">
+                                            <h4>Adidas</h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- THƯƠNG HIỆU PHẨM END -->
+        
         <div class="container-fluid">
-
-
             <div id="content">
                 <div class="row">
                     <div class="col-md-3">
@@ -417,6 +477,10 @@
             </div>
         </div>
     </div>
+    <button type="button" class="btn btn-primary btn-floating btn-lg"
+			id="btn-back-to-top">
+			<i class="ti-angle-double-up"></i>
+		</button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
