[ECLIPSE] Cập nhật giao diện admin
- Cập nhật giao diện admin
- Cập nhật giao diện trang user
- Cập nhật file word

--- a/ConverseStore_Java6/src/main/resources/templates/layout/layout_admin.html
+++ b/ConverseStore_Java6/src/main/resources/templates/layout/layout_admin.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" th:href="@{css/admin_css.css}" />
     <link th:href="@{/css/mycss.css}" rel="stylesheet" />
     <link th:href="@{/font/themify-icons/themify-icons.css}" rel="stylesheet" />
-    <title>CONVERSE - Thông tin cá nhân</title>
+    <title>CONVERSE - ADMIN</title>
 </head>
 
 <body>
