--- a/ConverseStore_Java6/src/main/resources/templates/user/sanphamCT.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/sanphamCT.html
@@ -89,6 +89,18 @@
                                 </select>
                             </form>
                         </div>
+                        
+                        <div class="row mt-4 mb-4">
+                            <span class="col-md-3 size1">Màu: </span>
+                            <form action="" class="col-md-9">
+                                <select class="form-select select-custom">
+                                    <option>Xanh</option>
+                                    <option>Đỏ</option>
+                                    <option>Tím</option>
+                                    <option>Vàng</option>
+                                </select>
+                            </form>
+                        </div>
 
                         <div class="row mt-4 mb-4">
                             <span class="col-md-3 size1">Số lượng: </span>
@@ -465,6 +477,7 @@
                                 </div>
                             </div>
                         </div>
+                        
                     </div>
                 </div>
             </div>
