--- a/ConverseStore_Java6/src/main/resources/templates/admin/admin_DanhMuc.html
+++ b/ConverseStore_Java6/src/main/resources/templates/admin/admin_DanhMuc.html
@@ -37,18 +37,30 @@
                             <form action="">
                                 <div class="row">
                                     <div class="mb-3 col-md-12">
-                                        <label for="madanhmuc" class="form-label">Mã danh mục:</label>
-                                        <input type="text" class="form-control" id="madanhmuc" placeholder="">
+                                        <label for="madanhmuc" class="form-label fs-17">Mã danh mục:</label>
+                                        <input type="text" class="form-control" id="madanhmuc" readonly="true">
                                     </div>
                                     <div class="mb-3 col-md-12">
-                                        <label for="tendanhmuc" class="form-label">Tên danh mục:</label>
+                                        <label for="tendanhmuc" class="form-label fs-17">Tên danh mục:</label>
                                         <input type="number" class="form-control" id="tendanhmuc" placeholder="">
                                     </div>
                                     <div class="mb-3 col-md-12">
-                                        <label for="anhdanhmuc" class="form-label">Ảnh:</label> <br>
-                                        <img src="./images/default.png" style="width: 200px; height: fit-content;" alt="hinhanh">
+                                        <label for="anhdanhmuc" class="form-label fs-17">Ảnh:</label> <br>
+                                        <img src="./imageSP/default.png" style="width: 200px; height: fit-content;" alt="hinhanh">
                                         <input type="file" class="form-control" id="anhdanhmuc" placeholder="">
                                     </div>
+                                    <label class="form-label fs-17">Trạng thái:</label> <br>
+							                <div class="d-inline-flex">
+							                    <div class="form-check mx-4">
+							                        <input type="radio" class="form-check-input" id="radio1"  value="true" >
+							                        <label class="form-check-label fs-17" for="radio1">Hoạt động</label>
+							                    </div>
+							                    <div class="form-check ">
+							                        <input type="radio" class="form-check-input" id="radio2"  value="false" > 
+							                        <label class="form-check-label fs-17" for="radio2">Không hoạt động</label>
+							                    </div>
+							                    
+							                </div>
                                 </div>
 
                                 <button type="button" class="btn btn-primary"><i class="bi bi-save2"></i> Thêm</button>
@@ -79,52 +91,71 @@
                                         <th>MÃ DANH MỤC</th>
                                         <th>TÊN DANH MỤC</th>
                                         <th>ẢNH</th>
+                                        <th>TRẠNG THÁI</th>
                                         <th></th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
                                         <td>1</td>
-                                        <td>Converse</td>
-                                        <td><img src="./images/default.png" style="width: 200px; height: fit-content;" alt="hinhanh"></td>
+                                        <td>Giày nam</td>
+                                        <td><img src="./imageSP/default.png" style="width: 200px; height: fit-content;" alt="hinhanh"></td>
+                                        <td>Hoạt động</td>
                                         <td>
-                                            <button type="button" class="btn btn-warning">Sửa</button>
+                                            <button type="button" class="btn btn-warning">Chọn</button>
                                             <button type="button" class="btn btn-danger">Xóa</button>
                                         </td>
                                     </tr>
 
                                     <tr>
                                         <td>2</td>
-                                        <td>Converse</td>
-                                        <td><img src="./images/default.png" style="width: 200px; height: fit-content;" alt="hinhanh"></td>
+                                        <td>Giày nữ</td>
+                                        <td><img src="./imageSP/default.png" style="width: 200px; height: fit-content;" alt="hinhanh"></td>
+                                        <td>Không hoạt động</td>
                                         <td>
-                                            <button type="button" class="btn btn-warning">Sửa</button>
+                                            <button type="button" class="btn btn-warning">Chọn</button>
                                             <button type="button" class="btn btn-danger">Xóa</button>
                                         </td>
                                     </tr>
 
                                     <tr>
                                         <td>3</td>
-                                        <td>Converse</td>
-                                        <td><img src="./images/default.png" style="width: 200px; height: fit-content;" alt="hinhanh"></td>
+                                        <td>Giày thể thao</td>
+                                        <td><img src="./imageSP/default.png" style="width: 200px; height: fit-content;" alt="hinhanh"></td>
+                                        <td>Hoạt động</td>
                                         <td>
-                                            <button type="button" class="btn btn-warning">Sửa</button>
+                                            <button type="button" class="btn btn-warning">Chọn</button>
                                             <button type="button" class="btn btn-danger">Xóa</button>
                                         </td>
                                     </tr>
 
                                     <tr>
                                         <td>4</td>
-                                        <td>Converse</td>
-                                        <td><img src="./images/default.png" style="width: 200px; height: fit-content;" alt="hinhanh"></td>
+                                        <td>Giày lười</td>
+                                        <td><img src="./imageSP/default.png" style="width: 200px; height: fit-content;" alt="hinhanh"></td>
+                                        <td>Hoạt động</td>
                                         <td>
-                                            <button type="button" class="btn btn-warning">Sửa</button>
+                                            <button type="button" class="btn btn-warning">Chọn</button>
                                             <button type="button" class="btn btn-danger">Xóa</button>
                                         </td>
                                     </tr>
 
                                 </tbody>
                             </table>
+                            <div class="d-flex justify-content-between">
+                            <ul class="pagination">
+								  <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+								  <li class="page-item"><a class="page-link" href="#">1</a></li>
+								  <li class="page-item active"><a class="page-link" href="#">2</a></li>
+								  <li class="page-item"><a class="page-link" href="#">3</a></li>
+								  <li class="page-item"><a class="page-link" href="#">Next</a></li>
+							</ul>
+							<div class="d-flex justify-content-around">
+							<ul class="pagination">
+								  <li class="page-item"><a class="page-link" href="#">First</a></li>
+								  <li class="page-item"><a class="page-link" href="#">Last</a></li>
+							</ul>
+							</div>
                         </div>
                         <div class="card-footer text-muted">
 
