--- a/ConverseStore_Java6/src/main/resources/templates/admin/admin_Mau.html
+++ b/ConverseStore_Java6/src/main/resources/templates/admin/admin_Mau.html
@@ -1,10 +1,164 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" th:replace="~{/layout/layout_admin::dynamic(~{::body})}">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" />
+    <link rel="stylesheet" th:href="@{css/admin_css.css}" />
+    <link th:href="@{/css/mycss.css}" rel="stylesheet" />
+    <link th:href="@{/font/themify-icons/themify-icons.css}" rel="stylesheet" />
+    <title>CONVERSE - Thông tin cá nhân</title>
 </head>
 <body style="background-color: rgb(238, 238, 238);">
+<!-- main content start  -->
+    <main id="#main-order">
+        <div class="container-fluid">
+            <div class="row" style="background-color: white; box-shadow: 10px 10px 25px grey; ">
+                <div class="col-md-12">
+                    <h4 style="padding: 2rem 0;">Quản lý sản phẩm - Màu Sản Phẩm</h4>
+                </div>
+            </div>
+            <div class="row article " style="display: flex; justify-content: center;">
+                <div class="col-md-11 mt-5"
+                    style="background-color: white; box-shadow: 10px 10px 25px grey;padding: 0; ">
+                    <div class="card">
+                        <div class="card-header"
+                            style="font-weight: bolder; font-size: larger; color: rgb(25, 31, 32);">
+                            Form Màu Sản Phẩm
+                        </div>
+                        <div class="card-body">
+                            <form action="">
+                                <div class="row">
+                                    <div class="mb-3 col-md-12">
+                                        <label for="masize" class="form-label fs-17">Mã Màu:</label>
+                                        <input type="text" class="form-control" id="masize" readonly="true">
+                                    </div>
+                                    <div class="mb-3 col-md-12">
+                                        <label for="sizeee" class="form-label fs-17">Tên Màu:</label>
+                                        <input type="text" class="form-control" id="sizeee" placeholder="">
+                                    </div>
+                                    <label class="form-label fs-17">Trạng thái:</label> <br>
+							                <div class="d-inline-flex">
+							                    <div class="form-check mx-4">
+							                        <input type="radio" class="form-check-input" id="radio1"  value="true" >
+							                        <label class="form-check-label fs-17" for="radio1">Hoạt động</label>
+							                    </div>
+							                    <div class="form-check ">
+							                        <input type="radio" class="form-check-input" id="radio2"  value="false" > 
+							                        <label class="form-check-label fs-17" for="radio2">Không hoạt động</label>
+							                    </div>
+							                    
+							                </div>
+                                </div>
 
+                                <button type="button" class="btn btn-primary"><i class="bi bi-save2"></i> Thêm</button>
+                                <button type="button" class="btn btn-success"><i class="bi bi-card-list"></i>
+                                    Sửa</button>
+                                <button type="button" class="btn btn-danger"><i class="bi bi-trash"></i> Xóa</button>
+                                <button type="button" class="btn btn-info"><i class="bi bi-arrow-clockwise"></i> Làm
+                                    mới</button>
+
+                            </form>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="row article " style="display: flex; justify-content: center;">
+                <div class="col-md-11 mt-5"
+                    style="background-color: white; box-shadow: 10px 10px 25px grey; padding: 0;">
+                    <div class="card">
+                        <div class="card-header"
+                            style="font-weight: bolder; font-size: larger; color: rgb(25, 31, 32);">
+                            Bảng Danh Sách
+                        </div>
+                        <div class="card-body">
+                            <table class="table text-center table-hover table-size fs-17">
+
+                                <thead>
+                                    <tr style="font-size: 20px;">
+                                        <th>MÃ MÀU</th>
+                                        <th>TÊN MÀU</th>
+                                        <th>TRẠNG THÁI</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Xanh</td>
+                                        <td>Hoạt động</td>
+                                        <td>
+                                            <button type="button" class="btn btn-warning">Chọn</button>
+                                            <button type="button" class="btn btn-danger">Xóa</button>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>2</td>
+                                        <td>Đỏ</td>
+                                        <td>Hoạt động</td>
+                                        <td>
+                                            <button type="button" class="btn btn-warning">Chọn</button>
+                                            <button type="button" class="btn btn-danger">Xóa</button>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>3</td>
+                                        <td>Tím</td>
+                                        <td>Không hoạt động</td>
+                                        <td>
+                                            <button type="button" class="btn btn-warning">Chọn</button>
+                                            <button type="button" class="btn btn-danger">Xóa</button>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>4</td>
+                                        <td>Vàng</td>
+                                        <td>Hoạt động</td>
+                                        <td>
+                                            <button type="button" class="btn btn-warning">Chọn</button>
+                                            <button type="button" class="btn btn-danger">Xóa</button>
+                                        </td>
+                                    </tr>
+
+                                </tbody>
+                            </table>
+                            <div class="d-flex justify-content-between">
+                            <ul class="pagination">
+								  <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+								  <li class="page-item"><a class="page-link" href="#">1</a></li>
+								  <li class="page-item active"><a class="page-link" href="#">2</a></li>
+								  <li class="page-item"><a class="page-link" href="#">3</a></li>
+								  <li class="page-item"><a class="page-link" href="#">Next</a></li>
+							</ul>
+							<div class="d-flex justify-content-around">
+							<ul class="pagination">
+								  <li class="page-item"><a class="page-link" href="#">First</a></li>
+								  <li class="page-item"><a class="page-link" href="#">Last</a></li>
+							</ul>
+							</div>
+                        </div>
+                        </div>
+                        <div class="card-footer text-muted">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <!-- main content end  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.2/dist/chart.min.js"></script>
 </body>
 </html>
