--- a/ConverseStore_Java6/src/main/resources/templates/admin/admin_SanPhamCT.html
+++ b/ConverseStore_Java6/src/main/resources/templates/admin/admin_SanPhamCT.html
@@ -1,10 +1,193 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" th:replace="~{/layout/layout_admin::dynamic(~{::body})}">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" />
+    <link rel="stylesheet" th:href="@{css/admin_css.css}" />
+    <link th:href="@{/css/mycss.css}" rel="stylesheet" />
+    <link th:href="@{/font/themify-icons/themify-icons.css}" rel="stylesheet" />
+    <title>CONVERSE - Thông tin cá nhân</title>
 </head>
 <body style="background-color: rgb(238, 238, 238);">
+<!-- main content start  -->
+    <main id="#main-order">
+        <div class="container-fluid">
+            <div class="row" style="background-color: white; box-shadow: 10px 10px 25px grey; ">
+                <div class="col-md-12">
+                    <h4 style="padding: 2rem 0;">Quản lý sản phẩm - Sản phẩm chi tiết</h4>
+                </div>
+            </div>
+            <div class="row article " style="display: flex; justify-content: center;">
+                <div class="col-md-11 mt-5"
+                    style="background-color: white; box-shadow: 10px 10px 25px grey;padding: 0; ">
+                    <div class="card">
+                        <div class="card-header"
+                            style="font-weight: bolder; font-size: larger; color: rgb(25, 31, 32);">
+                            Form Sản Phẩm Chi Tiết
+                        </div>
+                        <div class="card-body">
+                            <form action="">
+                                <div class="row">
+                                    <div class="mb-3 col-md-12">
+                                        <label for="masanpham" class="form-label fs-17">Mã sản phẩm chi tiết:</label>
+                                        <input type="text" class="form-control" id="masanpham" readonly="true">
+                                    </div>
 
+                                  
+                                       
+                                        
+                                        <div class="mb-3 col-md-4">
+                                            <label for="madanhmcu" class="form-label fs-17">Tên sản phẩm:</label>
+                                            <select class="form-select" aria-label="Default select example">
+                                                <option selected>Vui lòng chọn sản phẩm</option>
+                                                <option value="1">Converse 01</option>
+                                                <option value="2">Converse 02</option>
+                                                <option value="3">Nike 01</option>
+                                            </select>
+                                        </div>
+                                        <div class="mb-3 col-md-4">
+                                            <label for="manhacungcap" class="form-label fs-17">Size:</label>
+                                            <select class="form-select" aria-label="Default select example">
+                                                <option selected>Vui lòng chọn size</option>
+                                                <option value="1">35</option>
+                                                <option value="2">36</option>
+                                                <option value="3">37</option>
+                                            </select>
+                                        </div>
+                                        <div class="mb-3 col-md-4">
+                                            <label for="manhacungcap" class="form-label fs-17">Màu:</label>
+                                            <select class="form-select" aria-label="Default select example">
+                                                <option selected>Vui lòng chọn màu màu</option>
+                                                <option value="1">Xanh</option>
+                                                <option value="2">Đỏ</option>
+                                                <option value="3">Tím</option>
+                                            </select>
+                                        </div>
+                                         <div class="mb-3 col-md-12">
+                                            <label for="giassanpham" class="form-label fs-17">Số lượng:</label>
+                                            <input type="number" class="form-control" id="giassanpham" placeholder="">
+                                        </div>
+                                    
+                                </div>
+
+                                <button type="button" class="btn btn-primary"><i class="bi bi-save2"></i> Thêm</button>
+                                <button type="button" class="btn btn-success"><i class="bi bi-card-list"></i>
+                                    Sửa</button>
+                                <button type="button" class="btn btn-danger"><i class="bi bi-trash"></i> Xóa</button>
+                                <button type="button" class="btn btn-info"><i class="bi bi-arrow-clockwise"></i> Làm
+                                    mới</button>
+
+                            </form>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="row article " style="display: flex; justify-content: center;">
+                <div class="col-md-11 mt-5"
+                    style="background-color: white; box-shadow: 10px 10px 25px grey; padding: 0;">
+                    <div class="card">
+                        <div class="card-header"
+                            style="font-weight: bolder; font-size: larger; color: rgb(25, 31, 32);">
+                            Bảng Danh Sách
+                        </div>
+                        <div class="card-body">
+                            <table class="table text-center table-hover table-size fs-17">
+
+                                <thead>
+                                    <tr style="font-size: 15px;">
+                                        <th>MÃ SẢN PHẨM CHI TIẾT</th>
+                                        <th>TÊN SẢN PHẨM</th>
+                                        <th>SIZE</th>
+                                        <th>TÊN MÀU</th>
+                                        <th>SỐ LƯỢNG</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Converse 01</td>
+                                        <td>35</td>
+                                        <td>Xanh</td>
+                                        <td>50</td>
+                                        <td>
+                                            <button type="button" class="btn btn-warning">Sửa</button>
+                                            <button type="button" class="btn btn-danger">Xóa</button>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Converse 01</td>
+                                        <td>35</td>
+                                        <td>Xanh</td>
+                                        <td>50</td>
+                                        <td>
+                                            <button type="button" class="btn btn-warning">Sửa</button>
+                                            <button type="button" class="btn btn-danger">Xóa</button>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Converse 01</td>
+                                        <td>35</td>
+                                        <td>Xanh</td>
+                                        <td>50</td>
+                                        <td>
+                                            <button type="button" class="btn btn-warning">Sửa</button>
+                                            <button type="button" class="btn btn-danger">Xóa</button>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Converse 01</td>
+                                        <td>35</td>
+                                        <td>Xanh</td>
+                                        <td>50</td>
+                                        <td>
+                                            <button type="button" class="btn btn-warning">Sửa</button>
+                                            <button type="button" class="btn btn-danger">Xóa</button>
+                                        </td>
+                                    </tr>
+
+                                </tbody>
+                            </table>
+                            <div class="d-flex justify-content-between">
+                            <ul class="pagination">
+								  <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+								  <li class="page-item"><a class="page-link" href="#">1</a></li>
+								  <li class="page-item active"><a class="page-link" href="#">2</a></li>
+								  <li class="page-item"><a class="page-link" href="#">3</a></li>
+								  <li class="page-item"><a class="page-link" href="#">Next</a></li>
+							</ul>
+							<div class="d-flex justify-content-around">
+							<ul class="pagination">
+								  <li class="page-item"><a class="page-link" href="#">First</a></li>
+								  <li class="page-item"><a class="page-link" href="#">Last</a></li>
+							</ul>
+							</div>
+                        </div>
+                        </div>
+                        <div class="card-footer text-muted">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <!-- main content end  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.2/dist/chart.min.js"></script>
 </body>
 </html>
