--- a/ConverseStore_Java6/src/main/resources/templates/admin/admin_Size.html
+++ b/ConverseStore_Java6/src/main/resources/templates/admin/admin_Size.html
@@ -34,13 +34,25 @@
                             <form action="">
                                 <div class="row">
                                     <div class="mb-3 col-md-12">
-                                        <label for="masize" class="form-label">Mã Size:</label>
-                                        <input type="text" class="form-control" id="masize" placeholder="">
+                                        <label for="masize" class="form-label fs-17">Mã Size:</label>
+                                        <input type="text" class="form-control" id="masize" readonly="true">
                                     </div>
                                     <div class="mb-3 col-md-12">
-                                        <label for="sizeee" class="form-label">Size:</label>
+                                        <label for="sizeee" class="form-label fs-17">Size:</label>
                                         <input type="number" class="form-control" id="sizeee" placeholder="">
                                     </div>
+                                    <label class="form-label fs-17">Trạng thái:</label> <br>
+							                <div class="d-inline-flex">
+							                    <div class="form-check mx-4">
+							                        <input type="radio" class="form-check-input" id="radio1"  value="true" >
+							                        <label class="form-check-label fs-17" for="radio1">Hoạt động</label>
+							                    </div>
+							                    <div class="form-check ">
+							                        <input type="radio" class="form-check-input" id="radio2"  value="false" > 
+							                        <label class="form-check-label fs-17" for="radio2">Không hoạt động</label>
+							                    </div>
+							                    
+							                </div>
                                 </div>
 
                                 <button type="button" class="btn btn-primary"><i class="bi bi-save2"></i> Thêm</button>
@@ -72,6 +84,7 @@
                                     <tr style="font-size: 20px;">
                                         <th>MÃ SIZE</th>
                                         <th>SIZE</th>
+                                        <th>TRẠNG THÁI</th>
                                         <th></th>
                                     </tr>
                                 </thead>
@@ -79,8 +92,9 @@
                                     <tr>
                                         <td>1</td>
                                         <td>35</td>
+                                        <td>Hoạt động</td>
                                         <td>
-                                            <button type="button" class="btn btn-warning">Sửa</button>
+                                            <button type="button" class="btn btn-warning">Chọn</button>
                                             <button type="button" class="btn btn-danger">Xóa</button>
                                         </td>
                                     </tr>
@@ -88,8 +102,9 @@
                                     <tr>
                                         <td>2</td>
                                         <td>35</td>
+                                        <td>Hoạt động</td>
                                         <td>
-                                            <button type="button" class="btn btn-warning">Sửa</button>
+                                            <button type="button" class="btn btn-warning">Chọn</button>
                                             <button type="button" class="btn btn-danger">Xóa</button>
                                         </td>
                                     </tr>
@@ -97,8 +112,9 @@
                                     <tr>
                                         <td>3</td>
                                         <td>35</td>
+                                        <td>Không hoạt động</td>
                                         <td>
-                                            <button type="button" class="btn btn-warning">Sửa</button>
+                                            <button type="button" class="btn btn-warning">Chọn</button>
                                             <button type="button" class="btn btn-danger">Xóa</button>
                                         </td>
                                     </tr>
@@ -106,14 +122,30 @@
                                     <tr>
                                         <td>4</td>
                                         <td>35</td>
+                                        <td>Hoạt động</td>
                                         <td>
-                                            <button type="button" class="btn btn-warning">Sửa</button>
+                                            <button type="button" class="btn btn-warning">Chọn</button>
                                             <button type="button" class="btn btn-danger">Xóa</button>
                                         </td>
                                     </tr>
 
                                 </tbody>
                             </table>
+                            <div class="d-flex justify-content-between">
+                            <ul class="pagination">
+								  <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+								  <li class="page-item"><a class="page-link" href="#">1</a></li>
+								  <li class="page-item active"><a class="page-link" href="#">2</a></li>
+								  <li class="page-item"><a class="page-link" href="#">3</a></li>
+								  <li class="page-item"><a class="page-link" href="#">Next</a></li>
+							</ul>
+							<div class="d-flex justify-content-around">
+							<ul class="pagination">
+								  <li class="page-item"><a class="page-link" href="#">First</a></li>
+								  <li class="page-item"><a class="page-link" href="#">Last</a></li>
+							</ul>
+							</div>
+                        </div>
                         </div>
                         <div class="card-footer text-muted">
 
