--- a/ConverseStore_Java6/src/main/resources/templates/layout/admin_menu.html
+++ b/ConverseStore_Java6/src/main/resources/templates/layout/admin_menu.html
@@ -237,5 +237,10 @@
     </div>
     <!-- MENU đứng kết thúc -->
     </div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.2/dist/chart.min.js"></script>
 </body>
 </html>
