--- a/ConverseStore_Java6/src/main/resources/templates/user/sanpham.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/sanpham.html
@@ -205,7 +205,21 @@
                                 </div>
                             </div>
                         </div>
-                        
+                        <div class="d-flex justify-content-between">
+                            <ul class="pagination">
+								  <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+								  <li class="page-item"><a class="page-link" href="#">1</a></li>
+								  <li class="page-item active"><a class="page-link" href="#">2</a></li>
+								  <li class="page-item"><a class="page-link" href="#">3</a></li>
+								  <li class="page-item"><a class="page-link" href="#">Next</a></li>
+							</ul>
+							<div class="d-flex justify-content-around">
+							<ul class="pagination">
+								  <li class="page-item"><a class="page-link" href="#">First</a></li>
+								  <li class="page-item"><a class="page-link" href="#">Last</a></li>
+							</ul>
+							</div>
+                        </div>
                     </div>
                 </div>
             </div>
