--- a/ConverseStore_Java6/src/main/resources/templates/user/trangchu.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/trangchu.html
@@ -84,7 +84,7 @@
                                             style="height: 300px;">
                                         <div class="card-body">
                                             <div class="card-title text-center">
-                                                <h4>Converse</h4>
+                                                <h4>Giày Nam</h4>
                                             </div>
                                         </div>
                                     </a>
@@ -97,7 +97,7 @@
                                         style="height: 300px;">
                                     <div class="card-body">
                                         <div class="card-title text-center">
-                                            <h4>Vans</h4>
+                                            <h4>Giày Nữ</h4>
                                         </div>
                                     </div>
                                 </div>
@@ -108,7 +108,7 @@
                                         style="height: 300px;">
                                     <div class="card-body">
                                         <div class="card-title text-center">
-                                            <h4>Supreme</h4>
+                                            <h4>Giày Thể Thao</h4>
                                         </div>
                                     </div>
                                 </div>
@@ -119,7 +119,7 @@
                                         style="height: 300px;">
                                     <div class="card-body">
                                         <div class="card-title text-center">
-                                            <h4>Adidas</h4>
+                                            <h4>Giày Lười</h4>
                                         </div>
                                     </div>
                                 </div>
@@ -144,12 +144,12 @@
                                 <a href="./chitietsp.html">
                                     <h4 class="card-title text-center">Converse Renew Canvas</h4>
                                     <div class="price-product">
-                                        <h4 class="card-title">Giá cũ: <span class="card-title-old">1.990.000đ</span></h4>
-                                        <h4 class="card-title">Giá mới: <span class="card-title-sale">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-old">1,990,000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-sale">1,500,000đ</span></h4>
                                     </div>
                                 </a>
                                 <div class="row d-flex justify-content-center">
-                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Giỏ hàng</a>
+                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Chi tiết</a>
                                     <a href="#" class="btn product-btn"><i class="ti-heart"></i> Yêu thích</a>
                                 </div>
                             </div>
@@ -163,12 +163,12 @@
                                 <a href="./chitietsp.html">
                                     <h4 class="card-title text-center">Converse Renew Canvas</h4>
                                     <div class="price-product">
-                                        <h4 class="card-title">Giá cũ: <span class="card-title-old">1.990.000đ</span></h4>
-                                        <h4 class="card-title">Giá mới: <span class="card-title-sale">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-old">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-sale">1.990.000đ</span></h4>
                                     </div>
                                 </a>
                                 <div class="row d-flex justify-content-center">
-                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Giỏ hàng</a>
+                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Chi tiết</a>
                                     <a href="#" class="btn product-btn"><i class="ti-heart"></i> Yêu thích</a>
                                 </div>
                             </div>
@@ -182,12 +182,12 @@
                                 <a href="./chitietsp.html">
                                     <h4 class="card-title text-center">Converse Renew Canvas</h4>
                                     <div class="price-product">
-                                        <h4 class="card-title">Giá cũ: <span class="card-title-old">1.990.000đ</span></h4>
-                                        <h4 class="card-title">Giá mới: <span class="card-title-sale">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-old">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-sale">1.990.000đ</span></h4>
                                     </div>
                                 </a>
                                 <div class="row d-flex justify-content-center">
-                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Giỏ hàng</a>
+                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Chi tiết</a>
                                     <a href="#" class="btn product-btn"><i class="ti-heart"></i> Yêu thích</a>
                                 </div>
                             </div>
@@ -201,12 +201,12 @@
                                 <a href="./chitietsp.html">
                                     <h4 class="card-title text-center">Converse Renew Canvas</h4>
                                     <div class="price-product">
-                                        <h4 class="card-title">Giá cũ: <span class="card-title-old">1.990.000đ</span></h4>
-                                        <h4 class="card-title">Giá mới: <span class="card-title-sale">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-old">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-sale">1.990.000đ</span></h4>
                                     </div>
                                 </a>
                                 <div class="row d-flex justify-content-center">
-                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Giỏ hàng</a>
+                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Chi tiết</a>
                                     <a href="#" class="btn product-btn"><i class="ti-heart"></i> Yêu thích</a>
                                 </div>
                             </div>
@@ -220,12 +220,12 @@
                                 <a href="./chitietsp.html">
                                     <h4 class="card-title text-center">Converse Renew Canvas</h4>
                                     <div class="price-product">
-                                        <h4 class="card-title">Giá cũ: <span class="card-title-old">1.990.000đ</span></h4>
-                                        <h4 class="card-title">Giá mới: <span class="card-title-sale">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-old">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-sale">1.990.000đ</span></h4>
                                     </div>
                                 </a>
                                 <div class="row d-flex justify-content-center">
-                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Giỏ hàng</a>
+                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Chi tiết</a>
                                     <a href="#" class="btn product-btn"><i class="ti-heart"></i> Yêu thích</a>
                                 </div>
                             </div>
@@ -239,12 +239,12 @@
                                 <a href="./chitietsp.html">
                                     <h4 class="card-title text-center">Converse Renew Canvas</h4>
                                     <div class="price-product">
-                                        <h4 class="card-title">Giá cũ: <span class="card-title-old">1.990.000đ</span></h4>
-                                        <h4 class="card-title">Giá mới: <span class="card-title-sale">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-old">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-sale">1.990.000đ</span></h4>
                                     </div>
                                 </a>
                                 <div class="row d-flex justify-content-center">
-                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Giỏ hàng</a>
+                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Chi tiết</a>
                                     <a href="#" class="btn product-btn"><i class="ti-heart"></i> Yêu thích</a>
                                 </div>
                             </div>
@@ -258,12 +258,12 @@
                                 <a href="./chitietsp.html">
                                     <h4 class="card-title text-center">Converse Renew Canvas</h4>
                                     <div class="price-product">
-                                        <h4 class="card-title">Giá cũ: <span class="card-title-old">1.990.000đ</span></h4>
-                                        <h4 class="card-title">Giá mới: <span class="card-title-sale">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-old">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-sale">1.990.000đ</span></h4>
                                     </div>
                                 </a>
                                 <div class="row d-flex justify-content-center">
-                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Giỏ hàng</a>
+                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Chi tiết</a>
                                     <a href="#" class="btn product-btn"><i class="ti-heart"></i> Yêu thích</a>
                                 </div>
                             </div>
@@ -277,12 +277,12 @@
                                 <a href="./chitietsp.html">
                                     <h4 class="card-title text-center">Converse Renew Canvas</h4>
                                     <div class="price-product">
-                                        <h4 class="card-title">Giá cũ: <span class="card-title-old">1.990.000đ</span></h4>
-                                        <h4 class="card-title">Giá mới: <span class="card-title-sale">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-old">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-sale">1.990.000đ</span></h4>
                                     </div>
                                 </a>
                                 <div class="row d-flex justify-content-center">
-                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Giỏ hàng</a>
+                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Chi tiết</a>
                                     <a href="#" class="btn product-btn"><i class="ti-heart"></i> Yêu thích</a>
                                 </div>
                             </div>
@@ -296,12 +296,12 @@
                                 <a href="./chitietsp.html">
                                     <h4 class="card-title text-center">Converse Renew Canvas</h4>
                                     <div class="price-product">
-                                        <h4 class="card-title">Giá cũ: <span class="card-title-old">1.990.000đ</span></h4>
-                                        <h4 class="card-title">Giá mới: <span class="card-title-sale">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-old">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-sale">1.990.000đ</span></h4>
                                     </div>
                                 </a>
                                 <div class="row d-flex justify-content-center">
-                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Giỏ hàng</a>
+                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Chi tiết</a>
                                     <a href="#" class="btn product-btn"><i class="ti-heart"></i> Yêu thích</a>
                                 </div>
                             </div>
@@ -315,12 +315,12 @@
                                 <a href="./chitietsp.html">
                                     <h4 class="card-title text-center">Converse Renew Canvas</h4>
                                     <div class="price-product">
-                                        <h4 class="card-title">Giá cũ: <span class="card-title-old">1.990.000đ</span></h4>
-                                        <h4 class="card-title">Giá mới: <span class="card-title-sale">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-old">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-sale">1.990.000đ</span></h4>
                                     </div>
                                 </a>
                                 <div class="row d-flex justify-content-center">
-                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Giỏ hàng</a>
+                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Chi tiết</a>
                                     <a href="#" class="btn product-btn"><i class="ti-heart"></i> Yêu thích</a>
                                 </div>
                             </div>
@@ -334,12 +334,12 @@
                                 <a href="./chitietsp.html">
                                     <h4 class="card-title text-center">Converse Renew Canvas</h4>
                                     <div class="price-product">
-                                        <h4 class="card-title">Giá cũ: <span class="card-title-old">1.990.000đ</span></h4>
-                                        <h4 class="card-title">Giá mới: <span class="card-title-sale">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-old">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-sale">1.990.000đ</span></h4>
                                     </div>
                                 </a>
                                 <div class="row d-flex justify-content-center">
-                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Giỏ hàng</a>
+                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Chi tiết</a>
                                     <a href="#" class="btn product-btn"><i class="ti-heart"></i> Yêu thích</a>
                                 </div>
                             </div>
@@ -353,12 +353,12 @@
                                 <a href="./chitietsp.html">
                                     <h4 class="card-title text-center">Converse Renew Canvas</h4>
                                     <div class="price-product">
-                                        <h4 class="card-title">Giá cũ: <span class="card-title-old">1.990.000đ</span></h4>
-                                        <h4 class="card-title">Giá mới: <span class="card-title-sale">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-old">1.990.000đ</span></h4>
+                                        <h4 class="card-title"><span class="card-title-sale">1.990.000đ</span></h4>
                                     </div>
                                 </a>
                                 <div class="row d-flex justify-content-center">
-                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Giỏ hàng</a>
+                                    <a href="#" class="btn product-btn"><i class="ti-shopping-cart"></i> Chi tiết</a>
                                     <a href="#" class="btn product-btn"><i class="ti-heart"></i> Yêu thích</a>
                                 </div>
                             </div>
