[ECLIPSE] them link menu admin_ncc admin_khuyenmai them du lieu tam yeu thich ncc khuyen mai

--- a/ConverseStore_Java6/src/main/resources/templates/admin/admin_NhaCungCap.html
+++ b/ConverseStore_Java6/src/main/resources/templates/admin/admin_NhaCungCap.html
@@ -105,11 +105,43 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
+                                        <td>1</td>
+                                        <td>Betis</td>
+                                        <td>betis123@gmail.com</td>
+                                        <td>0956475867</td>
+                                        <td>97 HAO NAM, P.O CHO DUA, DONG DA, HA NOI</td>
+                                        <td>
+                                			<a type="button"
+												class="btn btn-success">
+												<i class="bi bi-card-list"></i> Sửa
+											</a>
+											<a type="button" class="btn btn-danger">
+												<i class="bi bi-trash"></i> Xóa
+											</a>
+										</td>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Betis</td>
+                                        <td>betis123@gmail.com</td>
+                                        <td>0956475867</td>
+                                        <td>97 HAO NAM, P.O CHO DUA, DONG DA, HA NOI</td>
+                                        <td>
+                                			<a type="button"
+												class="btn btn-success">
+												<i class="bi bi-card-list"></i> Sửa
+											</a>
+											<a type="button" class="btn btn-danger">
+												<i class="bi bi-trash"></i> Xóa
+											</a>
+										</td>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Betis</td>
+                                        <td>betis123@gmail.com</td>
+                                        <td>0956475867</td>
+                                        <td>97 HAO NAM, P.O CHO DUA, DONG DA, HA NOI</td>
                                         <td>
                                 			<a type="button"
 												class="btn btn-success">
