--- a/ConverseStore_Java6/src/main/resources/templates/user/yeuthich.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/yeuthich.html
@@ -36,9 +36,27 @@
 	            </thead>
 	            <tbody>
 	                <tr>
-	                    <td></td>
-	                    <td></td>
-	                    <td></td>
+	                    <td>1</td>
+	                    <td>Converse Renew Canvas</td>
+	                    <td>2023-7-10</td>
+	                    <td class="d-flex justify-content-around" style="font-size: 27px;">
+	                        <a class="color-black"><i class="ti-pencil"></i></a>
+	                        <a class="color-black"><i class="ti-trash"></i></a>
+	                    </td>
+	                </tr>
+	                <tr>
+	                    <td>1</td>
+	                    <td>Converse Renew Canvas</td>
+	                    <td>2023-7-10</td>
+	                    <td class="d-flex justify-content-around" style="font-size: 27px;">
+	                        <a class="color-black"><i class="ti-pencil"></i></a>
+	                        <a class="color-black"><i class="ti-trash"></i></a>
+	                    </td>
+	                </tr>
+	                <tr>
+	                    <td>1</td>
+	                    <td>Converse Renew Canvas</td>
+	                    <td>2023-7-10</td>
 	                    <td class="d-flex justify-content-around" style="font-size: 27px;">
 	                        <a class="color-black"><i class="ti-pencil"></i></a>
 	                        <a class="color-black"><i class="ti-trash"></i></a>
