--- a/ConverseStore_Java6/src/main/resources/templates/admin/admin_KhuyenMai.html
+++ b/ConverseStore_Java6/src/main/resources/templates/admin/admin_KhuyenMai.html
@@ -113,12 +113,46 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
+                                        <td>1</td>
+                                        <td>Ngày vàng săn sale</td>
+                                        <td>10</td>
+                                        <td>2023-7-10</td>
+                                        <td>2023-7-15</td>
+                                        <td>Đang diễn ra</td>
+                                        <td>
+                                			<a type="button"
+												class="btn btn-success">
+												<i class="bi bi-card-list"></i> Sửa
+											</a>
+											<a type="button" class="btn btn-danger">
+												<i class="bi bi-trash"></i> Xóa
+											</a>
+										</td>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Ngày vàng săn sale</td>
+                                        <td>10</td>
+                                        <td>2023-7-10</td>
+                                        <td>2023-7-15</td>
+                                        <td>Đang diễn ra</td>
+                                        <td>
+                                			<a type="button"
+												class="btn btn-success">
+												<i class="bi bi-card-list"></i> Sửa
+											</a>
+											<a type="button" class="btn btn-danger">
+												<i class="bi bi-trash"></i> Xóa
+											</a>
+										</td>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Ngày vàng săn sale</td>
+                                        <td>10</td>
+                                        <td>2023-7-10</td>
+                                        <td>2023-7-15</td>
+                                        <td>Đang diễn ra</td>
                                         <td>
                                 			<a type="button"
 												class="btn btn-success">
