--- a/ConverseStore_Java6/src/main/resources/templates/layout/admin_menu.html
+++ b/ConverseStore_Java6/src/main/resources/templates/layout/admin_menu.html
@@ -72,7 +72,7 @@
 
                     <!-- Quản lý nhà cung cấp bắt đầu  -->
                     <li>
-                        <a href="#" class="nav-link px-3">
+                        <a th:href="@{/admin_ncc}" class="nav-link px-3">
                             <span class="me-2"><i class="bi bi-book-fill"></i></span>
                             <span>Quản lý nhà cung cấp</span>
                         </a>
@@ -94,7 +94,7 @@
                         <div class="collapse" id="khuyenmai">
                             <ul class="navbar-nav ps-3">
                                 <li>
-                                    <a href="#" class="nav-link px-3">
+                                    <a th:href="@{/admin_khuyenmai}" class="nav-link px-3">
                                         <span class="me-2"><i class="bi bi-window-sidebar"></i></span>
                                         <span>Khuyến mãi</span>
                                     </a>
