[ECLIPSE]_GiaoDien_Cập Nhật Giao Diện Đơn Hàng

--- a/ConverseStore_Java6/src/main/resources/templates/layout/user_menu.html
+++ b/ConverseStore_Java6/src/main/resources/templates/layout/user_menu.html
@@ -59,7 +59,7 @@
 									<div th:if="${user != null}">
 										<li><a class="dropdown-item"
 											th:href="@{/thaydoithongtin}">THÔNG TIN CÁ NHÂN</a></li>
-										<li><a class="dropdown-item" th:href="@{/donhang}">ĐƠN
+										<li><a class="dropdown-item" th:href="@{/danhsachdonhang}">ĐƠN
 												HÀNG</a></li>
 										<li><a class="dropdown-item" th:href="@{/logout}">ĐĂNG
 												XUẤT</a></li>
