--- a/ConverseStore_Java6/src/main/resources/templates/layout/admin_menu.html
+++ b/ConverseStore_Java6/src/main/resources/templates/layout/admin_menu.html
@@ -173,13 +173,13 @@
                         <div class="collapse" id="donhang">
                             <ul class="navbar-nav ps-3">
                                 <li>
-                                    <a href="#" class="nav-link px-3">
+                                    <a th:href="@{/donhang}" class="nav-link px-3">
                                         <span class="me-2"><i class="bi bi-bag"></i></span>
                                         <span>Đơn hàng</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="nav-link px-3">
+                                    <a th:href="@{/donhang}" class="nav-link px-3">
                                         <span class="me-2"><i class="bi bi-bag-check"></i></span>
                                         <span>Đơn hàng đã giao</span>
                                     </a>
