--- a/ConverseStore_Java6/src/main/resources/templates/user/danhsachdonhang.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/danhsachdonhang.html
@@ -29,7 +29,7 @@
                     <td>950.000đ</td>
                     <td>Đã Giao</td>
                     <td class="d-flex justify-content-around" style="font-size: 27px;">
-                        <a class="color-black" href="receipt.html"><i class="ti-receipt"></i></a>
+                        <a class="color-black" th:href="@{/donhang}"><i class="ti-receipt"></i></a>
                         <a class="color-black" href="#"><i class="ti-trash"></i></a>
                     </td>
                 </tr>
@@ -40,7 +40,7 @@
                     <td>950.000đ</td>
                     <td>Đã Giao</td>
                     <td class="d-flex justify-content-around" style="font-size: 27px;">
-                        <a class="color-black" href="receipt.html"><i class="ti-receipt"></i></a>
+                        <a class="color-black" th:href="@{/donhang}"><i class="ti-receipt"></i></a>
                         <a class="color-black" href="#"><i class="ti-trash"></i></a>
                     </td>
                 </tr>
@@ -51,7 +51,7 @@
                     <td>950.000đ</td>
                     <td>Đã Giao</td>
                     <td class="d-flex justify-content-around" style="font-size: 27px;">
-                        <a class="color-black" href="receipt.html"><i class="ti-receipt"></i></a>
+                        <a class="color-black" th:href="@{/donhang}"><i class="ti-receipt"></i></a>
                         <a class="color-black" href="#"><i class="ti-trash"></i></a>
                     </td>
                 </tr>
@@ -62,7 +62,7 @@
                     <td>950.000đ</td>
                     <td>Đã Giao</td>
                     <td class="d-flex justify-content-around" style="font-size: 27px;">
-                        <a class="color-black" href="receipt.html"><i class="ti-receipt"></i></a>
+                        <a class="color-black" th:href="@{/donhang}"><i class="ti-receipt"></i></a>
                         <a class="color-black" href="#"><i class="ti-trash"></i></a>
                     </td>
                 </tr>
