[WORD] Cập nhật file word

--- a/ConverseStore_Java6/src/main/resources/templates/user/sanpham.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/sanpham.html
@@ -29,10 +29,10 @@
                     <div class="danhmuc-sp">
                         <h5>DANH MỤC SẢN PHẨM</h5>
                         <ul>
-                            <li><a href="#">Converse</a></li>
-                            <li><a href="#">Vans</a></li>
-                            <li><a href="#">Supreme</a></li>
-                            <li><a href="#">Adidas</a></li>
+                            <li><a href="#">Giày nam</a></li>
+                            <li><a href="#">Giày nữ</a></li>
+                            <li><a href="#">Giày thể thao</a></li>
+                            <li><a href="#">Giày lười</a></li>
                         </ul>
                     </div>
                     <div class="danhmuc-sp mt-5">
@@ -40,6 +40,14 @@
                         <ul>
                             <li><a href="#">Cao</a></li>
                             <li><a href="#">Thấp</a></li>
+                        </ul>
+                    </div>
+                    <div class="danhmuc-sp mt-5">
+                        <h5>THƯƠNG HIỆU</h5>
+                        <ul>
+                            <li><a href="#">Converse</a></li>
+                            <li><a href="#">Vans</a></li>
+                            <li><a href="#">Nike</a></li>
                         </ul>
                     </div>
                 </div>
