[Eclipse] thêm phần đánh giá chi tiết sp

--- a/ConverseStore_Java6/src/main/resources/templates/user/sanphamCT.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/sanphamCT.html
@@ -205,6 +205,39 @@
             </div>
         </div>
     </div>
+    
+    <!-- form bình luận start -->
+	<div class="container">
+		<h4 class="title-bosuutap">BÌNH LUẬN</h4>
+		<form>
+			<div class="form-group mb-3">
+				<label for="comment">Nhập bình luận:</label>
+				<textarea class="form-control" id="comment" rows="3" required></textarea>
+			</div>
+			<button type="submit" class="btn btn-primary">Gửi</button>
+		</form>
+	</div>
+
+	<!-- Hiển thị bình luận -->
+	<div class="container mt-4">
+		<h4>Bình luận</h4>
+		<div class="media">
+			<img src="user-avatar.jpg" class="mr-3" alt="User Avatar">
+			<div class="media-body">
+				<h5 class="mt-0">Nguyễn Văn A</h5>
+				<p>Sản phẩm chất lượng</p>
+			</div>
+		</div>
+		<div class="media">
+			<img src="user-avatar.jpg" class="mr-3" alt="User Avatar">
+			<div class="media-body">
+				<h5 class="mt-0">Nguyễn Thái Sơn</h5>
+				<p>Sản phẩm rất ưng ý từ khâu đóng gói đến vận chuyển</p>
+			</div>
+		</div>
+	</div>
+
+	<!-- form bình luận end -->
 
     <!-- sản phẩm tương tự start  -->
 
