[ECLIPSE, WORD] Thêm các lớp model
- Thêm các lớp model: Brands, categories, Colors, Products, ProductVariants, Sizes
- Tạo liên kết giữa các bảng
- Chỉnh sửa giao diện trang sản phẩm khách hàng
- Cập nhật các thay đổi vào file word

--- a/ConverseStore_Java6/src/main/resources/static/css/mycss.css
+++ b/ConverseStore_Java6/src/main/resources/static/css/mycss.css
@@ -780,3 +780,27 @@ h5 {
 }
 
 /* main changeinfo end */
+
+/*Zoom images start*/
+.zoom {
+            width: max-content;
+            position: relative;
+        }
+
+        .zoom img {
+            width: 500px;
+            
+        }
+
+        #imgZoom {
+            position: absolute;
+            left: 0;
+            top: 0;
+            --zoom-x: 50%;
+            --zoom-y: 50%;
+            transform: scale(1.5);
+            pointer-events: none;
+            clip-path: circle(100px at var(--zoom-x) var(--zoom-y));
+            opacity: 0;
+        }
+        /*Zoom images end*/
