--- a/ConverseStore_Java6/src/main/resources/templates/user/sanpham.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/sanpham.html
@@ -6,51 +6,96 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONVERSE || SẢN PHẨM</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
-        crossorigin="anonymous" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
-        integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
-        crossorigin="anonymous" />
-    <link th:href="@{/css/mycss.css}" rel="stylesheet" />
-    <link th:href="@{/font/themify-icons/themify-icons.css}" rel="stylesheet" />
-
 </head>
 
 <body>
     <div id="mainProduct">
         <div class="container-fluid">
             <div class="row mt-4">
-                <div class="col-md-3">
-                    <div class="danhmuc-sp">
-                        <h5>DANH MỤC SẢN PHẨM</h5>
-                        <ul>
-                            <li><a href="#">Giày nam</a></li>
-                            <li><a href="#">Giày nữ</a></li>
-                            <li><a href="#">Giày thể thao</a></li>
-                            <li><a href="#">Giày lười</a></li>
-                        </ul>
+<div class="col-md-3">
+            <div id="accordion">
+                <div class="card">
+                    <div class="card-header" style="text-align: center; background-color: beige;">
+                         <a class="btn" data-bs-toggle="collapse" href="#collapseOne"> <!--data-bs-parent="#accordion" -->
+                            <h5>DANH MỤC SẢN PHẨM</h5>
+                        </a>
                     </div>
-                    <div class="danhmuc-sp mt-5">
-                        <h5>DÁNG GIÀY</h5>
-                        <ul>
-                            <li><a href="#">Cao</a></li>
-                            <li><a href="#">Thấp</a></li>
-                        </ul>
-                    </div>
-                    <div class="danhmuc-sp mt-5">
-                        <h5>THƯƠNG HIỆU</h5>
-                        <ul>
-                            <li><a href="#">Converse</a></li>
-                            <li><a href="#">Vans</a></li>
-                            <li><a href="#">Nike</a></li>
-                        </ul>
+                    <div id="collapseOne" class="collapse show">
+                        <div class="card-body">
+                            <div class="danhmuc-sp">
+                                
+                                <ul>
+                                    <li><a href="#">Giày nam</a></li>
+                                    <li><a href="#">Giày nữ</a></li>
+                                    <li><a href="#">Giày thể thao</a></li>
+                                    <li><a href="#">Giày lười</a></li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
+
+                <div class="card">
+                    <div class="card-header" style="text-align: center; background-color: beige;">
+                        <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">
+                            <h5>DÁNG GIÀY</h5>
+                        </a>
+                    </div>
+                    <div id="collapseTwo" class="collapse">
+                        <div class="card-body">
+                            <div class="danhmuc-sp">
+                                
+                                <ul>
+                                    <li><a href="#">Cao</a></li>
+                                    <li><a href="#">Thấp</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header" style="text-align: center; background-color: beige;">
+                        <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">
+                            <h5>THƯƠNG HIỆU</h5>
+                        </a>
+                    </div>
+                    <div id="collapseThree" class="collapse">
+                        <div class="card-body">
+                            <div class="danhmuc-sp">
+                               
+                                <ul>
+                                    <li><a href="#">Converse</a></li>
+                                    <li><a href="#">Vans</a></li>
+                                    <li><a href="#">Nike</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header" style="text-align: center; background-color: beige;">
+                        <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseFour">
+                            <h5>LỌC SẢN PHẨM</h5>
+                        </a>
+                    </div>
+                    <div id="collapseFour" class="collapse">
+                        <div class="card-body">
+                            <select class="form-select ">
+                                <option value="">Vui lòng chọn kiểu sắp xếp</option>
+                                <option>Sắp xếp sản phẩm theo tên từ A -> Z</option>
+                                <option>Sắp xếp sản phẩm theo tên từ Z -> A</option>
+                                <option>Sắp xếp sản phẩm giá cao -> giá thấp</option>
+                                <option>Sắp xếp sản phẩm giá thấp -> giá cao</option>
+                              </select>
+                              <button type="button" class="btn btn-primary mt-3">Lọc</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
                 <div class="col-md-9">
                     <div class="row">
                         <div class="col-xl-3 col-lg-4 col-sm-6 col-12 mb-4">
@@ -236,61 +281,6 @@
     <button type="button" class="btn btn-primary btn-floating btn-lg" id="btn-back-to-top">
         <i class="ti-angle-double-up"></i>
     </button>
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-        crossorigin="anonymous"></script>
-    <script>
-        $('.owl-carousel').owlCarousel({
-            loop: true,
-            margin: 15,
-            nav: true,
-            responsive: {
-                0: {
-                    items: 1
-                },
-                600: {
-                    items: 2
-                },
-                1000: {
-                    items: 4
-                }
-            }
-        })
-    </script>
-
-    <script>
-        let mybutton = document.getElementById("btn-back-to-top");
-        window.onscroll = function () {
-            scrollFunction();
-        };
-
-        function scrollFunction() {
-            if (
-                document.body.scrollTop > 20 ||
-                document.documentElement.scrollTop > 20
-            ) {
-                mybutton.style.display = "block";
-            } else {
-                mybutton.style.display = "none";
-            }
-        }
-        mybutton.addEventListener("click", backToTop);
-
-        function backToTop() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-        }
-    </script>
-
-
 </body>
 
 </html>
