[WORD] cap nhat file word
-chinh sua phac thao giao dien
-chup phac thao giao dien va giao dien vao file word

--- a/ConverseStore_Java6/src/main/resources/templates/admin/admin_KhuyenMai.html
+++ b/ConverseStore_Java6/src/main/resources/templates/admin/admin_KhuyenMai.html
@@ -58,7 +58,7 @@
                                     </div>
                                      <div class="mb-3 col-md-12">
                                         <label for="exampleFormControlInput1" class="form-label" style="font-size: 18px"><b>Mô tả</b></label><br>
-                                        <textarea rows="10" cols="163"  id="mota" name="mota"></textarea>
+                                        <textarea rows="10" cols="163"  id="mota" name="mota" style="width: 100%"></textarea>
                                     </div>
                                     <div class="mb-3 col-md-6">
                                         <input type="text" class="form-control" id="mancc" name="mancc"
