[ECLIPSE] Cập nhật code người dùng
- Hiển thị danh sách sản phẩm
- Hiển thị danh mục, load sp theo danh mục
- Hiển thị hãng, load sp theo hãng
- Hiển thị sản phẩm chi tiết, liên kết của sp chi tiết khi ấn vào sp
- Hiển thị sản phẩm tương tự dựa trên danh mục sản phẩm

--- a/ConverseStore_Java6/src/main/resources/templates/user/gioithieu.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/gioithieu.html
@@ -12,7 +12,7 @@
     <!-- main about start -->
     <div id="mainAbout">
         <div class="container">
-            <img src="./images/slideShow1.jpg" alt="" />
+            <img src="/assets/images/slideShow1.jpg" alt="" />
             <div class="about-title">
                 <h1>Chào bạn, chúng tôi là CONVERSE!</h1>
                 <p class="sub-title">Hân hạnh được phục vụ bạn</p>
@@ -25,12 +25,12 @@
         </div>
 
         <div class="container bg-light">
-            <img src="./images/WhyNot.png" class="w-100" alt="">
+            <img src="/assets/images/WhyNot.png" class="w-100" alt="">
         </div>
 
         <section class="row">
             <div class="col-md-6 col1">
-                <img src="./images/why.dadbe7c5.png" alt="" />
+                <img src="/assets/images/why.dadbe7c5.png" alt="" />
             </div>
             <div class="col-md-6 col2">
                 <p class="p-content content1">TẠI SAO KHÔNG?</p>
@@ -51,7 +51,7 @@
         <section class="row about-value">
             <div class="col-md-4">
                 <div class="about-core-img">
-                    <img src="./images/about-value2.png" alt="" />
+                    <img src="/assets/images/about-value2.png" alt="" />
                 </div>
                 <div class="about-core-name">
                     <p>Dám nghĩ, dám làm</p>
@@ -66,7 +66,7 @@
             </div>
             <div class="col-md-4">
                 <div class="about-core-img">
-                    <img src="./images/about-value1.png" alt="" />
+                    <img src="/assets/images/about-value1.png" alt="" />
                 </div>
                 <div class="about-core-name">
                     <p>Bắt đầu và kết thúc bằng khách hàng</p>
@@ -80,7 +80,7 @@
             </div>
             <div class="col-md-4">
                 <div class="about-core-img">
-                    <img src="./images/about-value3.png" alt="" />
+                    <img src="/<assets></assets>/images/about-value3.png" alt="" />
                 </div>
                 <div class="about-core-name">
                     <p>Truyền cảm hứng</p>
